# secure_coding

./: .gitignore  README.md  cheat_sheet.md  docker-compose.yml  install_debian.sh  secure_coding.Dockerfile
local_data/: malwaretest.c  wannabe_ransomware
local_data/prebuild_package/: secure_coding_demo_package-0.0.1-py3-none-any.whl
local_data/python_package/: pyproject.toml
