[project]
name = "secure_coding_demo_package"
version = "0.0.1"
authors = [
    { name="Bill gates", email="bill.gates@microsoft.com"},
]
requires-python = ">=3.9"


[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"


[build-system]
requires = ["setuptools==61.0", "wheel==0.43.0"]
build-backend = "setuptools.build_meta"
